# VlinderSLAM_v2

./: .gitignore  CMakeLists.txt  ESKF.cpp  ESKF.h  PoseIO.h  UDPMessage.h  UDPSender.cpp  UDPSender.h  imudatareceiver.h  main.cpp  main_backup.cpp  run_A105.sh  unrolledFPFt.h
arduino_code/: read_imu.ino
arduino_code/Custom_Adafruit_BNO08x/src/: Custom_Adafruit_BNO08x.cpp  sh2.c  sh2.h  sh2_SensorValue.c  sh2_SensorValue.h
assets/: RealSense2_1280x720.txt  imu_extrinsic.txt  map_A105.msg  no_imu_traj_TUM.txt  proj_extrinsic.txt  proj_intrinsics.txt  stella_config_rs_d455.yml
